# mapsnap

./: .gitignore  CLAUDE.md  EXPERIMENTS.md  README.md  analyze_georef_transforms.py  compare_iiif_georef.py  compare_ocr.py  detect_text.py  detect_text_test.py  fit.sh  georef_from_labels.py  osm_to_centerlines.py  pipeline-loc.sh  pipeline-oim.sh  pipeline.sh  pyproject.toml
.github/workflows/: app-ci.yml  ci.yml
app/: iiif-server.mjs  index.html  keymap-server.mjs  keymap.html  notes-server.mjs  package-lock.json  package.json  server.mjs  vite.config.ts
app/server/: api.ts  compareTxt.test.ts  compareTxt.ts  iiifAnnotations.test.ts  iiifRoutes.ts  (+10 more)
gallery/: brooklyn-1904-1908.iiif.json  brooklyn_ny_1906_vol_6.iiif.json  brooklyn_ny_1939_vol_1.iiif.json  brooklyn_ny_1939_vol_2.iiif.json  champaign_ill_1915.iiif.json  chicago_il_1950_vol_1.iiif.json  detroit_mich_1929_vol_11.iiif.json  grand_rapids_mi_1953_vol7.iiif.json  hudson_co_nj_1950_vol_9.iiif.json  kansas_city_mo_1951_vol_4.iiif.json  nashville_tn_1957_vol1a.iiif.json  new_orleans_la_1896_vol_2.iiif.json  new_orleans_la_1951_vol_5.iiif.json  san_francisco_calif_1950_vol_2.iiif.json  washington_dc_1916_vol_2.iiif.json
mapsnap/: README.md  block_index_test.py  cli.py  clip_masks.py  clip_masks_test.py  compare_iiif_georef.py  compare_iiif_georef_test.py  crnn_model.py  crnn_model_test.py  ctc_vocab_decode.py  ctc_vocab_decode_test.py  detect_keymap_numbers.py  detect_keymap_numbers_test.py  detect_numbers_cnn.py  detect_numbers_cnn_test.py  detect_numbers_crnn.py  detect_numbers_crnn_test.py  detect_pastel.py  detect_pastel_test.py  detect_text.py  detect_text_test.py  download_loc_iiif.py  download_oim_iiif.py  download_osm.py  download_osm_test.py  download_raw.py  edge_join.py  edge_join_experiment.py  edge_join_graph.py  edge_join_graph_test.py  edge_join_test.py  experiments.py  experiments_test.py  fetch_loc.py  fit.py  fit_keymap.py  fit_keymap_test.py  generate_intersections.py  georef_from_labels.py  georef_from_labels_test.py  (+52 more)
models/: README.md  number_crnn.pt
sanborn/: generate_intersections.py
scripts/: explore_splits.py  make_panel_truth.py  migrate_loc_layout.py  score_splits.py
testdata/: chicago_p29n_centerlines.geojson
(+314 files in other folders)
