[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mapsnap-cli"
version = "1.1.0"
description = "Georeferencing tools for historical maps"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "easyocr>=1.7.2",
    "numpy>=2.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "shapely>=2.0",
    "tqdm>=4.67.1",
]

[project.scripts]
mapsnap = "mapsnap.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["mapsnap"]

[tool.ruff]
line-length = 88

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]
