[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mapsnap-cli"
version = "1.1.0"
description = "Georeferencing tools for historical maps"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "easyocr>=1.7.2",
    "numpy>=2.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "segment-anything>=1.0",
    "shapely>=2.0",
    "torchvision>=0.27",
    "tqdm>=4.67.1",
]

[project.scripts]
mapsnap = "mapsnap.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["mapsnap"]

[tool.ruff]
line-length = 88

[tool.pyright]
# torch re-exports many names (device, tensor, sigmoid, ...) without listing them in
# __all__, which pyright otherwise flags as private-import usage on every call.
reportPrivateImportUsage = false

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
